@@ -638,3 +638,10 @@ struct player_type
 };
 
 extern player_type Players[2] @ Players_real;
+
+
+/*
+ * Objs
+ */
+extern bool c_get_item @ get_item_aux(int *cp, cptr pmt, bool equip, bool inven, bool floor);
+extern void lua_set_item_tester(int tval, char *fct);
