@@ -178,4 +178,4 @@ extern int Send_spike(int dir);
 extern int Send_skill_mod(int i);
 extern int Send_store_examine(int item);
 extern int Send_store_command(int action, int item, int item2, int amt, int gold);
-extern int Send_activate_skill(int mkey, int book, int spell, int dir);
+extern int Send_activate_skill(int mkey, int book, int spell, int dir, int item, int aux);
