@@ -676,3 +676,5 @@ extern bool no_lite(int Ind);
 
 extern bool can_use(int Ind, object_type *o_ptr);
 extern bool interfere(int Ind, int chance);
+
+extern void telekinesis_aux(int Ind, int item);
